--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
     "next": "15.0.4",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "redis": "^4.7.0",
+    "uuid": "^11.0.3"
   }
 }
